reference conf for pekko  #29

--- a/README.adoc
+++ b/README.adoc
@@ -592,7 +592,9 @@ pekko {
 // rest gateway config
 rest-gateway {
   host = "0.0.0.0"
-  port = 7070 // Gateway port
+  host = ${?REST_GATEWAY_HOST}
+  port = 7070
+  port = ${?REST_GATEWAY_PORT}
 }
 ----
 
